Fri Oct  1 09:54:07 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * orbsvcs/tests/Bug_2777_Regression/run_test.pl:
          Fixed append of .exe part to tao_nslist on Windows.

Thu Sep 30 14:48:58 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * orbsvcs/tests/Bug_2777_Regression/run_test.pl:

          The two test targets will communicate over shared memory (SHMIOP)
          so they can't be 32-bit and 64-bit executables on the same host.

Thu Sep 30 10:17:00 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_component/context_svs.cpp:
        * TAO_IDL/be/be_visitor_component/servant_svs.cpp:
          Layout changes to the generated code and simplified the subscribe
          methods, a few checks where done multiple times

Thu Sep 30 09:47:23 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/AnyTypeCode/AnySeq.pidl:
        * tao/AnyTypeCode/Dynamic.pidl:
        * tao/AnyTypeCode/Dynamic_Parameter.pidl:
        * tao/AnyTypeCode/ValueModifier.pidl:
        * tao/AnyTypeCode/Visibility.pidl:
        * tao/BiDir_GIOP/BiDirPolicy.pidl:
        * tao/BooleanSeq.pidl:
        * tao/CSD_Framework/CSD_Framework.pidl:
        * tao/CharSeq.pidl:
        * tao/DoubleSeq.pidl:
        * tao/DynamicAny/DynamicAny.pidl:
        * tao/EndpointPolicy/EndpointPolicyType.pidl:
        * tao/FloatSeq.pidl:
        * tao/IIOP.pidl:
        * tao/IIOP_Endpoints.pidl:
        * tao/IORInterceptor/IORInfo.pidl:
        * tao/IORInterceptor/IORInterceptor.pidl:
        * tao/IORManipulation/IOR.pidl:
        * tao/IORTable/IORTable.pidl:
        * tao/ImR_Client/ImplRepo.pidl:
        * tao/ImR_Client/ServerObject.pidl:
        * tao/LongDoubleSeq.pidl:
        * tao/LongLongSeq.pidl:
        * tao/LongSeq.pidl:
        * tao/Messaging/Messaging.pidl:
        * tao/Messaging/Messaging_No_Impl.pidl:
        * tao/Messaging/Messaging_RT_Policy.pidl:
        * tao/Messaging/Messaging_SyncScope_Policy.pidl: