@@ -1,3 +1,11 @@
+Fri Oct  1 12:58:51 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * TAO_IDL/util/utl_global.cpp:
+          Typo fix
+
+        * tao/PI/Interceptor_List_T.cpp:
+          Layout changes
+
 Fri Oct  1 09:54:07 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>
 
         * orbsvcs/tests/Bug_2777_Regression/run_test.pl:
